--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
       href="./images/favicon-32x32.png"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300..800&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="./style.css" />
+
     <title>
       Frontend Mentor | Huddle landing page with alternating feature blocks
     </title>
@@ -19,7 +35,7 @@
   <body>
     <section class="hero-section">
       <div class="nav">
-        <img src="./images/logo.svg" alt="Logo" />
+        <img src="./images/logo.svg" alt="Logo" class="logo" />
         <button type="button" class="btn-1">Try It Free</button>
       </div>
       <div class="hero-content">
@@ -30,11 +46,12 @@
             but so does your audience. Create connections with your users as you
             engage in genuine discussion.
           </p>
-          <button type="button">Get Started For Free</button>
+          <button type="button" class="btn-2">Get Started For Free</button>
         </div>
         <img
           src="./images/illustration-mockups.svg"
           alt="Mockups illustration"
+          class="mockups-img"
         />
       </div>
     </section>
@@ -43,7 +60,7 @@
       <div class="card card-1">
         <div class="main-texts">
           <h2>Grow Together</h2>
-          <p>
+          <p class="text">
             Generate meaningful discussions with your audience and build a
             strong, loyal community. Think of the insightful conversations you
             miss out on with a feedback form.
@@ -52,12 +69,13 @@
         <img
           src="./images/illustration-grow-together.svg"
           alt="Grow together illustration"
+          class="illustration"
         />
       </div>
       <div class="card card-2">
-        <div class="main-texts">
+        <div class="main-texts text-2">
           <h2>Flowing Conversations</h2>
-          <p>
+          <p class="text">
             You wouldn't paginate a conversation in real life, so why do it
             online? Our threads have just-in-time loading for a more natural
             flow.
@@ -66,12 +84,13 @@
         <img
           src="./images/illustration-flowing-conversation.svg"
           alt="Flowing conversation illustration"
+          class="illustration illustration-2"
         />
       </div>
-      <div class="card card-1">
+      <div class="card card-3">
         <div class="main-texts">
           <h2>Your Users</h2>
-          <p>
+          <p class="text">
             It takes no time at all to integrate Huddle with your app's
             authentication solution. This means, once signed in to your app,
             your users can start chatting immediately.
@@ -80,27 +99,32 @@
         <img
           src="./images/illustration-your-users.svg"
           alt="Your users illustration"
+          class="illustration"
         />
       </div>
     </section>
 
     <section class="sub-section">
-      <div class="card">
+      <div class="card-4">
         <h2>Ready To Build Your Community?</h2>
-        <button type="button">Get Started For Free</button>
+        <button type="button" class="btn-3">Get Started For Free</button>
       </div>
     </section>
 
     <section class="footer-section">
-      <img src="./images/logo.svg" alt="Logo" />
+      <img src="./images/logo.svg" alt="Logo" class="logo-footer" />
       <div class="footer-content">
-        <img src="./images/icon-location.svg" alt="Location icon" />
-        <p>
+        <img
+          src="./images/icon-location.svg"
+          alt="Location icon"
+          class="location-icon"
+        />
+        <p class="location">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua
         </p>
-        <p>About Us</p>
-        <p>Career</p>
+        <p class="about-us">About Us</p>
+        <p class="career">Career</p>
         <div class="icons">
           <div class="icon">
             <img src="./images/facebook.svg" alt="Facebook icon" />
@@ -112,15 +136,25 @@
             <img src="./images/instagram.svg" alt="Instagram icon" />
           </div>
         </div>
-        <p>What We Do</p>
-        <p>Blog</p>
-        <img src="./images/icon-phone.svg" alt="Phone icon" />
-        <p>+1-543-123-4567</p>
-        <p>FAQ</p>
-        <p>Contact Us</p>
-        <img src="./images/icon-email.svg" alt="Email icon" />
-        <p>example@huddle.com</p>
-        <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+        <p class="what-we-do">What We Do</p>
+        <p class="blog">Blog</p>
+        <img
+          src="./images/icon-phone.svg"
+          alt="Phone icon"
+          class="phone-icon"
+        />
+        <p class="phone-no">+1-543-123-4567</p>
+        <p class="faq">FAQ</p>
+        <p class="contact-us">Contact Us</p>
+        <img
+          src="./images/icon-email.svg"
+          alt="Email icon"
+          class="email-icon"
+        />
+        <p class="email">example@huddle.com</p>
+        <p class="copyright">
+          &copy; Copyright 2018 Huddle. All rights reserved.
+        </p>
       </div>
     </section>
   </body>
