--- a/index.html
+++ b/index.html
@@ -114,15 +114,17 @@
     <section class="footer-section">
       <img src="./images/logo.svg" alt="Logo" class="logo-footer" />
       <div class="footer-content">
-        <img
-          src="./images/icon-location.svg"
-          alt="Location icon"
-          class="location-icon"
-        />
-        <p class="location">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua
-        </p>
+        <div class="location">
+          <img
+            src="./images/icon-location.svg"
+            alt="Location icon"
+            class="location-icon"
+          />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
         <p class="about-us">About Us</p>
         <p class="career">Career</p>
         <div class="icons">
@@ -138,20 +140,25 @@
         </div>
         <p class="what-we-do">What We Do</p>
         <p class="blog">Blog</p>
-        <img
-          src="./images/icon-phone.svg"
-          alt="Phone icon"
-          class="phone-icon"
-        />
-        <p class="phone-no">+1-543-123-4567</p>
+        <div class="phone-no">
+          <img
+            src="./images/icon-phone.svg"
+            alt="Phone icon"
+            class="phone-icon"
+          />
+          <p>+1-543-123-4567</p>
+        </div>
         <p class="faq">FAQ</p>
         <p class="contact-us">Contact Us</p>
-        <img
-          src="./images/icon-email.svg"
-          alt="Email icon"
-          class="email-icon"
-        />
-        <p class="email">example@huddle.com</p>
+        <div class="email">
+          <img
+            src="./images/icon-email.svg"
+            alt="Email icon"
+            class="email-icon"
+          />
+          <p>example@huddle.com</p>
+        </div>
+
         <p class="copyright">
           &copy; Copyright 2018 Huddle. All rights reserved.
         </p>
